--- a/report/MethodologicalApproach.tex
+++ b/report/MethodologicalApproach.tex
@@ -36,6 +36,7 @@ The MDA aims, as well as the Code Generation automation, at the creation of mode
 Given the fact that our transformation has the purpose of showing the feasibility of such a transformation form BPEL to Java, we have to take into account that only a small part of the BPEL language can be taken into account. Moreover, we want to propose a possibly expandable design for such a transformation. Last but not least, we have to keep an eye on possible future developments. For these reasons, we decided to use a Model Driven Architecture methodology.
 
 \subsection{Specific MDA approach: Template based Model-to-Text}
+\label{sec:M2TApproach}
 Once the MDA approach has been chosen, we have to choose which kind of model transformation we want to apply. As discussed in Section \ref{m2m&m2t}, there are two kinds of transformations: Model-to-Model and Model-to-Text. As we need a Java code output, the choice falls on the Model-to-Text type.
 Moreover, Model-to-Text also has two variants: visitor or template based. As discussed in Section \ref{m2m&m2t}, the visitor-based technique focus on traversing the input model's code and directly write text as output. While this technique would prove useful in case the translation could be carried out just as a sequence of steps, this is not true in the case of a BPEL to Java transformation. The structures of the BPEL model, which acts as an orchestrator of components, opposed to the Java object oriented application we wish to have as output, suggests us we have to able to get values and parameters from several places of the input model. Thus, the template-based transformation fits our needs at best.
 
