--- a/report/document.tex
+++ b/report/document.tex
@@ -299,6 +299,7 @@ pdfproducer = {latex + ps2pdf}}
 \input{ModelDrivenApproaches}
 \input{MethodologicalApproach}
 \input{DetailedArchitecture}
+\input{Implementation}
 \input{Discussion}
 \input{Conclusion}
 % 
